implemented service, controller and repository layers for operation getAllMovies and set the structure up for the other services; added integration tests for getAllMovies
